Make sure that text does not break out of containers

--- a/assets/_sass/blog.sass
+++ b/assets/_sass/blog.sass
@@ -60,6 +60,12 @@ header
         hyphens: auto
       p
         margin: 20px 0
+        -ms-word-break: break-all
+        word-break: break-all
+        word-break: break-word
+        -webkit-hyphens: auto
+        -moz-hyphens: auto
+        hyphens: auto
       img
         max-width: 65%
         margin: 20px 0
@@ -68,6 +74,12 @@ header
         box-shadow: 0 0 5px 0 $offblack
       li
         margin: 10px
+        -ms-word-break: break-all
+        word-break: break-all
+        word-break: break-word
+        -webkit-hyphens: auto
+        -moz-hyphens: auto
+        hyphens: auto
 
 .pagination a
   color: $offblack
